internal/dataplane/testdata/golden/ingress-v1-single-service-in-multiple-ingresses/expression-routes-on_golden.yaml
_format_version: "3.0"
services:
- connect_timeout: 60000
  host: foo-svc.foo-namespace.80.svc
  id: fe1e2edc-5479-52fe-b0f4-b90d8d5f83ba
  name: foo-namespace.foo-svc.80
  path: /
  port: 80
  protocol: http
  read_timeout: 60000
  retries: 5
  routes:
  - expression: (http.host == "example.com") && (http.path ^= "/")
    https_redirect_status_code: 426
    id: 3eee2c18-8fcc-5661-8f84-5c89adfa404f
    name: foo-namespace.foo.foo-svc.example.com.80
    preserve_host: true
    priority: 57178899677185
    protocols:
    - https
    request_buffering: true
    response_buffering: true
    strip_path: false
    tags:
    - k8s-name:foo
    - k8s-namespace:foo-namespace
    - k8s-kind:Ingress
    - k8s-group:networking.k8s.io
    - k8s-version:v1
  - expression: (http.host == "example.com") && (http.path ^= "/")
    https_redirect_status_code: 426
    id: ab6b1505-ec86-5b04-9d39-a95a711564cc
    name: foo-namespace.foo-2.foo-svc.example.com.80
    preserve_host: true
    priority: 57178899677185
    protocols:
    - https
    request_buffering: true
    response_buffering: true
    strip_path: false
    tags:
    - k8s-name:foo-2
    - k8s-namespace:foo-namespace
    - k8s-kind:Ingress
    - k8s-group:networking.k8s.io
    - k8s-version:v1
  tags:
  - k8s-name:foo-svc
  - k8s-namespace:foo-namespace
  - k8s-kind:Service
  - k8s-version:v1
  write_timeout: 60000
upstreams:
- algorithm: round-robin
  name: foo-svc.foo-namespace.80.svc
  tags:
  - k8s-name:foo-svc
  - k8s-namespace:foo-namespace
  - k8s-kind:Service
  - k8s-version:v1
